vendor/fixed-macro/tests/compile-fail/invalid-type-02.rs
fn main() {
    fixed_macro::fixed!(1.23: UF);
}
